--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto" tools:context=".MainActivity"
@@ -71,8 +72,9 @@
                 android:id="@+id/card"
                 app:cardCornerRadius="10dp"
                 app:cardPreventCornerOverlap="true"
-                app:cardBackgroundColor="#7E7D7D"
+                app:cardBackgroundColor="@color/card_bg"
                 android:layout_width="0dp"
+                app:cardElevation="3dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,10 +88,10 @@
                           android:layout_marginStart="16dp"
                           android:layout_marginTop="14dp" android:id="@+id/tv_temp_min"
                           android:text="@string/min"
-                          android:textColor="@color/white"
+                          android:textColor="@color/font_on_card"
                           style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" android:textSize="17sp"/>
                 <TextView android:layout_width="0dp" android:layout_height="wrap_content"
-                          android:textColor="@color/white"
+                          android:textColor="@color/font_on_card"
                           app:layout_constraintTop_toTopOf="parent"
                           android:layout_marginTop="14dp" android:id="@+id/tv_temp_max"
                           android:text="@string/max"
@@ -98,7 +100,7 @@
                           style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" android:textSize="17sp"
                           android:textAlignment="center"/>
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                          android:textColor="@color/white"
+                          android:textColor="@color/font_on_card"
                           app:layout_constraintTop_toTopOf="parent"
                           android:layout_marginTop="14dp" android:id="@+id/tv_humidity"
                           android:text="@string/humidity"
@@ -107,7 +109,7 @@
                           style="@style/TextAppearance.AppCompat.SearchResult.Subtitle" android:textSize="17sp"/>
                 <TextView
                         android:text="@string/celsius"
-                        android:textColor="@color/white"
+                        android:textColor="@color/font_on_card"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/tv_min_value"
                         android:layout_marginTop="10dp"
@@ -117,7 +119,7 @@
                         style="@style/TextAppearance.Material3.TitleLarge" android:textSize="20sp"/>
                 <TextView
                         android:text="@string/celsius"
-                        android:textColor="@color/white"
+                        android:textColor="@color/font_on_card"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content" android:id="@+id/tv_max_value"
                         android:layout_marginTop="10dp"
@@ -127,7 +129,7 @@
                         app:layout_constraintStart_toEndOf="@+id/tv_temp_min"
                         app:layout_constraintEnd_toEndOf="@+id/tv_temp_max"/>
                 <TextView
-                        android:textColor="@color/white"
+                        android:textColor="@color/font_on_card"
                         android:text="@string/percent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/tv_humidity_value"
@@ -146,7 +148,7 @@
                     <TextView
                             android:text="@string/precipitation"
                             android:textSize="17sp"
-                            android:textColor="@color/white"
+                            android:textColor="@color/font_on_card"
                             style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                             android:layout_width="match_parent"
                             android:layout_weight="1"
@@ -154,7 +156,7 @@
                             android:textAlignment="center"
                     />
                     <TextView
-                            android:textColor="@color/white"
+                            android:textColor="@color/font_on_card"
                             android:text="@string/wind"
                             android:textSize="17sp"
                             android:layout_weight="1"
@@ -170,7 +172,7 @@
                               app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                               app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp">
                     <TextView
-                            android:textColor="@color/white"
+                            android:textColor="@color/font_on_card"
                             android:text="@string/mm_h"
                             android:textSize="20sp"
                             android:layout_weight="1"
@@ -179,7 +181,7 @@
                             android:layout_height="wrap_content" android:id="@+id/tv_rain_value"
                             android:textAlignment="center"/>
                     <TextView
-                            android:textColor="@color/white"
+                            android:textColor="@color/font_on_card"
                             android:text="@string/m_s"
                             android:textSize="20sp"
                             android:layout_weight="1"
